--- a/assets/icons/icomoon-v1.0/style.css
+++ b/assets/icons/icomoon-v1.0/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("fonts/icomoon.eot?dayyk0");
-  src: url("fonts/icomoon.eot?dayyk0#iefix") format("embedded-opentype"),
-    url("fonts/icomoon.ttf?dayyk0") format("truetype"),
-    url("fonts/icomoon.woff?dayyk0") format("woff"),
-    url("fonts/icomoon.svg?dayyk0#icomoon") format("svg");
+  src: url("fonts/icomoon.eot?ei12r3");
+  src: url("fonts/icomoon.eot?ei12r3#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?ei12r3") format("truetype"),
+    url("fonts/icomoon.woff?ei12r3") format("woff"),
+    url("fonts/icomoon.svg?ei12r3#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -65,39 +65,22 @@ i {
   content: "\e90c";
   color: #5b1c26;
 }
+.icon-close:before {
+  content: "\e91d";
+}
 .icon-arrow_back_ios:before {
   content: "\e90d";
 }
 .icon-arrow_forward_ios:before {
   content: "\e90e";
 }
-.icon-arrow-right {
-  position: relative;
-  background-image: url(../svg/arrow-right.svg);
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  background-position: center;
-  background-size: 7.8px 12.15px;
-  background-repeat: no-repeat;
-}
-.icon-arrow-left {
-  position: relative;
-  background-image: url(../svg/arrow-left.svg);
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  background-position: center;
-  background-size: 7.8px 12.15px;
-  background-repeat: no-repeat;
-}
 .icon-whats,
 .icon-snap,
 .icon-twitter,
 .icon-insta,
 .icon-face {
-  width: 35px;
-  height: 35px;
+  width: 3.5rem;
+  height: 3.5rem;
   display: inline-block;
   background-position: center;
   background-size: 100%;
@@ -118,4 +101,14 @@ i {
 }
 .icon-face {
   background-image: url(../svg/facebook.svg);
+}
+@media only screen and (max-width: 575px) {
+  .icon-whats,
+  .icon-snap,
+  .icon-twitter,
+  .icon-insta,
+  .icon-face {
+    width: 22px;
+    height: 22px;
+  }
 }
