--- a/assets/sass/components/_benefits.scss
+++ b/assets/sass/components/_benefits.scss
@@ -2,10 +2,19 @@
     margin-top: 8rem;
     padding: 2.3rem 0 3.4rem 0;
 
+    @include respond(575) {
+        margin-top: 16px;
+    }
+
     .h2 {
         text-align: center;
         // line-height: 42px;
         margin-bottom: 4rem;
+
+        @include respond(575) {
+            margin-bottom: 20px;
+        }
+
     }
 
     .hexagon {
@@ -19,12 +28,14 @@
         li {
             position: relative;
             display: flex;
+            align-items: center;
             margin-bottom: 1.7rem;
             filter: drop-shadow(0px 3px 10px rgba(149, 79, 96, 0.09));
 
 
 
             p {
+                align-self: stretch;
                 background-color: $color-white;
                 border-radius: 12px;
                 width: 100%;
@@ -40,6 +51,10 @@
                 // align-items: center;
                 justify-content: center;
                 color: rgba($color: $color-primary, $alpha: 0.79);
+
+                @include respond(575) {
+                    font-size: 14px;
+                }
             }
 
             .benefit-icon {
@@ -47,9 +62,20 @@
                 width: 13.75rem;
                 height: 11.5rem;
 
+                @include respond(575) {
+                    width: 64px;
+                    height: 53px;
+                }
+
                 svg {
                     width: 13.75rem;
                     height: 11.5rem;
+
+                    @include respond(575) {
+                        width: 64px;
+                        height: 53px;
+                    }
+
                 }
 
                 &-inner {
@@ -63,6 +89,10 @@
                     left: 50%;
                     transform: translate(-50%, -50%);
                     font-size: 3.1rem;
+
+                    @include respond(575) {
+                        font-size: 15px;
+                    }
                 }
             }
         }
@@ -88,6 +118,17 @@
                 max-width: 50%;
                 height: 36rem;
             }
+
+            @include respond(575) {
+                max-width: 70%;
+                height: 40rem;
+            }
+
+            @include respond(460) {
+                max-width: 100%;
+                height: 36rem;
+            }
+
 
             img {
                 width: 100%;
