--- a/assets/sass/components/_contact-form.scss
+++ b/assets/sass/components/_contact-form.scss
@@ -2,9 +2,17 @@
     margin-top: 10%;
     margin-bottom: 5.5%;
 
+    @include respond(575) {
+        margin: 16px 0 42.5px;
+    }
+
     h2 {
         text-align: center;
         margin-bottom: 5rem;
+
+        @include respond(575) {
+            margin-bottom: 16px;
+        }
     }
 
     .form {
@@ -16,7 +24,7 @@
             }
 
             .form-select {
-                background-size: 15px 20px;
+                background-size: 1.5rem 2rem;
                 background-position: left 20px center !important;
             }
 
@@ -29,6 +37,11 @@
                 text-align: right;
                 filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
                 border-radius: 2.5rem;
+
+                @include respond(575) {
+                    padding: 10px 13px !important;
+                    font-size: 12px;
+                }
 
                 &::placeholder {
                     color: $color-primary;
@@ -49,6 +62,18 @@
             height: 6.3rem;
             line-height: 6.3rem;
             font-size: var(--font-size-22);
+
+            @include respond(575) {
+                height: 50px;
+                line-height: 50px;
+                padding: 0 68px;
+
+                span,
+                &:after {
+                    height: 50px;
+                    line-height: 50px;
+                }
+            }
 
             span {
                 height: 6.3rem;
@@ -87,5 +112,5 @@
 .was-validated .form-select:invalid:not([multiple]):not([size]),
 .was-validated .form-select:invalid:not([multiple])[size="1"] {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e") !important;
-    background-size: 15px 20px;
+    background-size: 1.5rem 2rem;
 }
