--- a/assets/sass/components/_offers.scss
+++ b/assets/sass/components/_offers.scss
@@ -1,9 +1,17 @@
 .offers {
     margin: 10% 0;
 
+    @include respond(575) {
+        margin: 16px 0;
+    }
+
     h2 {
         margin-bottom: 5rem;
         text-align: center;
+
+        @include respond(575) {
+            margin-bottom: 20px;
+        }
     }
 }
 
@@ -79,6 +87,22 @@
             height: 5.3rem;
             line-height: 5.3rem;
             font-size: var(--font-size-17);
+
+            @include respond(575) {
+                height: 50px;
+                padding: 0 68px;
+                font-size: 17px;
+
+                span {
+                    height: 50px;
+                    line-height: 50px;
+                }
+
+                &:after {
+                    height: 50px;
+                    line-height: 50px;
+                }
+            }
 
             span {
                 height: 5.3rem;
