--- a/assets/sass/components/_testimonials.scss
+++ b/assets/sass/components/_testimonials.scss
@@ -2,16 +2,36 @@
     h2 {
         text-align: center;
         margin-bottom: 5rem;
+
+        @include respond(575) {
+            margin-bottom: 16px;
+        }
     }
 
     &-inner {
         padding: 5% 0;
+
+        @include respond(575) {
+            padding: 16px 0;
+        }
+    }
+
+    &-slider {
+        padding: 0 25px;
+
+        @include respond(767) {
+            padding: 0 0;
+        }
     }
 
 
     .owl-theme .owl-nav [class*=owl-] {
         background-color: $color-primary-light !important;
 
+    }
+
+    .owl-theme .owl-nav [class*=owl-]:hover {
+        background-color: $color-primary !important;
     }
 
     .owl-item {
@@ -41,6 +61,10 @@
         left: 0;
         transform: translateY(-50%);
 
+        @include respond(767) {
+            display: none !important;
+        }
+
         button {
             display: inline-flex !important;
             align-items: center;
@@ -50,6 +74,16 @@
             width: 30px;
             height: 30px;
 
+            &.owl-next {
+                i {
+                    margin-right: -5px;
+                }
+            }
+
+            i {
+                color: $color-white;
+                line-height: 30px;
+            }
         }
 
     }
