--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -1,9 +1,17 @@
 .video {
     margin: 10% 0 5rem 0;
 
+    @include respond(575) {
+        margin: 0 0 20px 0;
+    }
+
     h2 {
         margin-bottom: 5rem;
         text-align: center;
+
+        @include respond(575) {
+            margin-bottom: 16px;
+        }
     }
 
     &-wrapper {
