--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -10,6 +10,10 @@
         padding: 1.5rem 1rem 0;
     }
 
+    @include respond (575) {
+        padding: 2rem 1rem 0;
+    }
+
     &.sticky {
         position: fixed;
         top: 0;
@@ -66,6 +70,11 @@
             max-width: 8rem;
             max-height: 8rem;
         }
+
+        @include respond (575) {
+            max-width: 6rem;
+            max-height: 6rem;
+        }
     }
 
     .container {
@@ -74,6 +83,7 @@
         @include respond(767) {
             justify-content: space-between;
             align-items: center;
+            flex-direction: row-reverse;
         }
     }
 
